k8s/deploy-auth-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  labels:
    app: auth-svc
    service: auth-svc
spec:
  ports:
    - port: 5040
      name: rpc-auth
    - port: 5050
      name: http-auth
  selector:
    app: auth-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-svc-v1
  labels:
    app: auth-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-svc
      version: v1
  template:
    metadata:
      labels:
        app: auth-svc
        version: v1
    spec:
      serviceAccountName: jwt-test-auth-svc
      containers:
        - name: auth-svc
          image: docker.io/jasonheshuai/jwt-demo-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5040
            - containerPort: 5050
