k8s/deploy-user-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  labels:
    app: user-svc
    service: user-svc
spec:
  ports:
    - port: 5040
      name: rpc-user
    - port: 5050
      name: http-user
  selector:
    app: user-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-v1
  labels:
    app: user-svc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-svc
      version: v1
  template:
    metadata:
      labels:
        app: user-svc
        version: v1
    spec:
      serviceAccountName: jwt-test-user-svc
      containers:
        - name: user-svc
          image: docker.io/jasonheshuai/jwt-demo-user:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5040
            - containerPort: 5050
