k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jwt-test-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "jwttest.jasonheshuai.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jwt-test
spec:
  hosts:
    - "jwttest.jasonheshuai.com"
  gateways:
    - jwt-test-gateway
  http:
    - match:
        - uri:
            prefix: "/auth"
      route:
        - destination:
            host: auth-svc.jwt-test.svc.cluster.local
            port:
              number: 5050
    - match:
        - uri:
            prefix: "/user"
      route:
        - destination:
            host: user-svc.jwt-test.svc.cluster.local
            port:
              number: 5050
    - match:
        - uri:
            prefix: "/resource"
      route:
        - destination:
            host: resource-svc.jwt-test.svc.cluster.local
            port:
              number: 5050
