k8s/policy.yml
apiVersion: "security.istio.io/v1beta1"
kind: RequestAuthentication
metadata:
  name: jwt-authn-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: "admin@example.com"
      jwksUri: "http://jwttest.jasonheshuai.com/auth/jwks"
---
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - to:
      - operation:
          notPaths: ["/auth*", "/user/register"]
      when:
        - key: request.auth.claims[iss]
          notValues: ["admin@example.com"]
